prost-reflect/tests/snapshots/main__option_resolution21.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    dependency:
      - google/protobuf/descriptor.proto
    messageType:
      - name: Foo
        extension:
          - name: ext
            extendee: ".google.protobuf.MessageOptions"
            number: 1001
            label: LABEL_OPTIONAL
            type: TYPE_STRING
            jsonName: ext
            proto3Optional: true
        options:
          "[Foo.ext]": foo
      - name: Bar
        options:
          "[Foo.ext]": bar
    syntax: proto3

