prost-reflect/tests/snapshots/main__option_resolution22.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    dependency:
      - google/protobuf/descriptor.proto
    messageType:
      - name: Map
        field:
          - name: map
            number: 1
            label: LABEL_REPEATED
            type: TYPE_MESSAGE
            typeName: ".Map.MapEntry"
            jsonName: map
        nestedType:
          - name: MapEntry
            field:
              - name: key
                number: 1
                label: LABEL_OPTIONAL
                type: TYPE_STRING
                jsonName: key
              - name: value
                number: 2
                label: LABEL_OPTIONAL
                type: TYPE_INT32
                jsonName: value
            options:
              mapEntry: true
    extension:
      - name: ext
        extendee: ".google.protobuf.FileOptions"
        number: 1001
        label: LABEL_OPTIONAL
        type: TYPE_MESSAGE
        typeName: ".Map"
        jsonName: ext
    options:
      "[ext]":
        map:
          a: 1
          b: 2
          c: 3
    syntax: proto3

