prost-reflect/tests/snapshots/main__option_resolution3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    package: exttest
    dependency:
      - google/protobuf/descriptor.proto
    messageType:
      - name: Message
        field:
          - name: a
            number: 1
            label: LABEL_OPTIONAL
            type: TYPE_INT32
            jsonName: a
          - name: b
            number: 3
            label: LABEL_OPTIONAL
            type: TYPE_MESSAGE
            typeName: ".exttest.Message"
            jsonName: b
        extensionRange:
          - start: 5
            end: 7
    extension:
      - name: c
        extendee: ".exttest.Message"
        number: 5
        label: LABEL_OPTIONAL
        type: TYPE_INT32
        jsonName: c
      - name: d
        extendee: ".exttest.Message"
        number: 6
        label: LABEL_OPTIONAL
        type: TYPE_MESSAGE
        typeName: ".exttest.Message"
        jsonName: d
      - name: foo
        extendee: ".google.protobuf.FileOptions"
        number: 50000
        label: LABEL_OPTIONAL
        type: TYPE_MESSAGE
        typeName: ".exttest.Message"
        jsonName: foo
    options:
      "[exttest.foo]":
        "[exttest.d]":
          a: 1

